--- a/templates/write.html
+++ b/templates/write.html
@@ -33,7 +33,7 @@
 
 
     <!--파일업로드 코드-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>-->
+    <!--    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>-->
 
     <title>우리의 여행</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -203,6 +203,7 @@
                 color: white;
             }
         }
+
         /* !!여기는 모바일 버전 css 끝!! */
 
     </style>
@@ -216,28 +217,28 @@
 
         function make_log() {
 
-        // 본문 기록 작성에서 id 값으로 지정한 것이 #뒤에 적힌 것
-        let writer = $("#post-writer").val();
-        let numbers =  $("#post-numbers").val();
-        let place =  $("#post-place").val();
-        let title =  $("#post-title").val();
-        let date =  $("#post-date").val();
-        let weather =  $("#post-weather").val();
+            // 본문 기록 작성에서 id 값으로 지정한 것이 #뒤에 적힌 것
+            let writer = $("#post-writer").val();
+            let numbers = $("#post-numbers").val();
+            let place = $("#post-place").val();
+            let title = $("#post-title").val();
+            let date = $("#post-date").val();
+            let weather = $("#post-weather").val();
 
-        let comment =  $("#post-comment").val();
+            let comment = $("#post-comment").val();
 
-        // let file =  $("#file")[0].files[0];
+            // let file =  $("#file")[0].files[0];
 
-        let form_data = new FormData();
+            let form_data = new FormData();
 
-        form_data.append("writer_give", writer)
-        form_data.append("numbers_give", numbers)
-        form_data.append("place_give", place)
-        form_data.append("title_give", title)
-        form_data.append("date_give", date)
-        form_data.append("weather_give", weather)
-        // form_data.append("file_give", file)
-        form_data.append("comment_give", comment)
+            form_data.append("writer_give", writer)
+            form_data.append("numbers_give", numbers)
+            form_data.append("place_give", place)
+            form_data.append("title_give", title)
+            form_data.append("date_give", date)
+            form_data.append("weather_give", weather)
+            // form_data.append("file_give", file)
+            form_data.append("comment_give", comment)
 
             $.ajax({
                 type: "POST",
@@ -261,86 +262,97 @@
 </head>
 
 <body>
-    <header class="wrap">
-        <div class="sitetop">
-            <h1 class="sitetitle">우리의 여행</h1>
-        </div>
-        <div class="topnav">
-            <a href="/">우리의 여행일기</a>
-            <a class="active" href="/write">일기 쓰기</a>
-            <a href="/mylog">내 일기 모아보기</a>
-            <a href="#about">about</a>
-        </div>
-    </header>
+<header class="wrap">
+    <div class="sitetop">
+        <h1 class="sitetitle">우리의 여행</h1>
+    </div>
+    <div class="topnav">
+        <a href="/">우리의 여행일기</a>
+        <a class="active" href="/write">일기 쓰기</a>
+        <a href="/mylog">내 일기 모아보기</a>
+        <a href="/about">about</a>
+    </div>
+</header>
 
-    <div class="wrap">
+<div class="wrap">
 
-        <!--본문 부분: 기록 작성-->
-        <div class="form-post" id="post-box">
-            <div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <input class="form-control" id="post-writer" placeholder="ID">
-                    </div>
-                    <div class="form-group col-md-6">
-                        <input class="form-control" id="post-writer" placeholder="비밀번호">
-                    </div>
+    <!--본문 부분: 기록 작성-->
+    <div class="form-post" id="post-box">
+        <div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <input class="form-control" id="post-writer" placeholder="ID">
                 </div>
-
-                <div class="form-group">
-                    <input class="form-control" id="post-place" placeholder="여행지">
+                <div class="form-group col-md-6">
+                    <input class="form-control" id="post-writer" placeholder="비밀번호">
                 </div>
+            </div>
 
-                <div class="form-group">
-                    <input class="form-control" id="post-title" placeholder="일기 제목">
-                </div>
+            <div class="form-group">
+                <input class="form-control" id="post-place" placeholder="여행지">
+            </div>
 
-                <!--날짜-->
-                <div class="form-group">
-                    <input type="date" class="form-control" id="post-date" name="trip-start"
-                           placeholder="날짜 선택">
-                </div>
+            <div class="form-group">
+                <input class="form-control" id="post-title" placeholder="일기 제목">
+            </div>
 
-                <!--날씨-->
-                <!--날씨 중에 쓸 이모티콘을 선택해야 함-->
-                <!--<form action='a.jsp'>-->
-                <!--날씨<br>-->
-                <!--<input type='radio' name='weather' value='sunny'/>☀-->
-                <div class="form-group" id="post-weather">
-                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☀</label>
-                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☁</label>
-                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☂</label>
-                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">💨️</label>
-                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">⚡</label>
-                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">⛄</label>
-                </div>
+            <!--날짜-->
+            <div class="form-group">
+                <input type="date" class="form-control" id="post-date" name="trip-start"
+                       placeholder="날짜 선택">
+            </div>
+
+            <!--날씨-->
+            <div class="form-group">
+                <select class="form-control" id="post-weather">
+                    <option>날씨</option>
+                    <option>맑음</option>
+                    <option>흐림</option>
+                    <option>비</option>
+                    <option>바람</option>
+                    <option>눈</option>
+                </select>
+            </div>
+
+
+            <!--<form action='a.jsp'>-->
+            <!--날씨<br>-->
+            <!--<input type='radio' name='weather' value='sunny'/>☀-->
+            <!--                <div class="form-group" id="post-weather">-->
+            <!--                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☀</label>-->
+            <!--                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☁</label>-->
+            <!--                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☂</label>-->
+            <!--                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">💨️</label>-->
+            <!--                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">⚡</label>-->
+            <!--                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">⛄</label>-->
+            <!--                </div>-->
 
 
             <!--사진첨부-->
-<!--            <div class="custom-file">-->
-<!--                <input type="file" class="custom-file-input" id="file">-->
-<!--                <label class="custom-file-label" for="file">사진 선택</label>-->
-<!--            </div>-->
+            <!--            <div class="custom-file">-->
+            <!--                <input type="file" class="custom-file-input" id="file">-->
+            <!--                <label class="custom-file-label" for="file">사진 선택</label>-->
+            <!--            </div>-->
 
-                <!--내용작성-->
-                <div class="form-group-comment">
-                    <label for="post-comment">일기 내용</label>
-                    <textarea class="form-control" id="post-comment" rows="2"></textarea>
-                </div>
-
-
-                <button class="btn btn-primary" onclick="make_log()" type="button">일기 저장</button>
+            <!--내용작성-->
+            <div class="form-group-comment">
+                <label for="post-comment">일기 내용</label>
+                <textarea class="form-control" id="post-comment" rows="2"></textarea>
             </div>
 
-        </div>
-        <div class="card-columns" id="cards-box"></div>
-    </div>
 
-    <footer class="wrap">
-        <div class="footer">
-            <p>made by 코우파<br>
-                <a href="https://www.notion.so/c4d4062b9ee64ec7b7c14f301e2f6a45">우리의 여행</a></p>
+            <button class="btn btn-primary" onclick="make_log()" type="button">일기 저장</button>
         </div>
-    </footer>
+
+    </div>
+    <div class="card-columns" id="cards-box"></div>
+</div>
+
+<footer class="wrap">
+    <div class="footer">
+        <p>made by 코우파<br>
+            <a href="https://www.notion.so/c4d4062b9ee64ec7b7c14f301e2f6a45">우리의 여행</a></p>
+    </div>
+</footer>
 </body>
 </html>
