haein commit 홈배너 누르면 홈으로

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,8 +48,9 @@
             background-image: url("https://miro.medium.com/max/1400/1*T4H2-9ToU2Eg5yns8YQhIA.jpeg");
             background-size: cover;
             background-position: center;
-            text-decoration: none;
         }
+
+        .sitetop > a {text-decoration: none;}
 
         .sitetitle {
             margin: 10px;
@@ -60,7 +61,6 @@
 
             color: #ffffff;
             text-shadow: 2px 2px 0px #333333;
-            text-decoration: none;
         }
 
         /* Add a black background color to the top navigation */
@@ -132,7 +132,6 @@
                     font-weight: bold;
                     color: #ffffff;
                     text-shadow: 2px 2px 0px #333333;
-                    text-decoration: none;
                 }
 
                 /* Add a black background color to the top navigation */
