--- a/templates/index.html
+++ b/templates/index.html
@@ -41,16 +41,19 @@
                         let title = logs[i]['title']
                         let place = logs[i]['place']
                         let comment = logs[i]['comment']
+                        let writer = logs[i]['writer']
                         let date = logs[i]['date']
 
                         let temp_html = `<div class="card">
-                                            <img class="card-img-top"
-                                                 src="#"
-                                                 alt="Card image cap">
                                             <div class="card-body">
-                                                <h5 class="card-title"><span style="font-size: small">여행지</span></h5>
+                                                <h5 class="card-title">
+                                                    <span style="font-size: small">여행지: ${place}</span>
+                                                </h5>
+
+                                                <p class="card-text"> <h5>${title}</h5></p>
                                                 <p class="card-text">${comment}</p>
                                                 <p class="card-text"><small class="text-muted">${date}</small></p>
+                                                <p class="card-text"><span style="font-size: small">by. ${writer}</span></p>
                                             </div>
                                         </div>`
                     // 3. append 할 대상이 잘못 적혀있던 오류 수정
@@ -303,69 +306,7 @@
         </div>
 
         <!-- 4. bootstrap css 문제 해결을 위해 class에서 id로 변경 -->
-        <div id="card-deck">
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
-                    <p class="card-text">간단한 일기 내용입니다.</p>
-                    <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
-                    <p class="card-text">간단한 일기 내용입니다.</p>
-                    <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
-                    <p class="card-text">간단한 일기 내용입니다.</p>
-                    <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
-                </div>
-            </div>
-        </div>
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
-                    <p class="card-text">간단한 일기 내용입니다.</p>
-                    <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
-                    <p class="card-text">간단한 일기 내용입니다.</p>
-                    <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
-                    <p class="card-text">간단한 일기 내용입니다.</p>
-                    <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
-                </div>
-            </div>
-        </div> -->
+        <div id="card-deck"></div>
     </div>
 
     <footer class="wrap">
