--- a/templates/write.html
+++ b/templates/write.html
@@ -282,6 +282,7 @@
         <!--본문 부분: 기록 작성-->
         <div class="form-post" id="post-box">
             <div>
+                <div style="font-size: 12px">  본인의 ID와 비밀번호는 기억해주세요.</div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <input class="form-control" id="post-writer" placeholder="ID" maxlength="16">
@@ -313,11 +314,11 @@
             <div class="form-group">
                 <select class="form-control" id="post-weather">
                     <option>날씨</option>
-                    <option>맑음</option>
-                    <option>흐림</option>
-                    <option>비</option>
-                    <option>바람</option>
-                    <option>눈</option>
+                    <option>☀️ 맑음</option>
+                    <option>☁️ 흐림</option>
+                    <option>☂️ 비</option>
+                    <option>💨️ 바람</option>
+                    <option>⛄  눈</option>
                 </select>
             </div>
 
