--- a/templates/index.html
+++ b/templates/index.html
@@ -264,10 +264,10 @@
             <a href="/"><h1 class="sitetitle">우리의 여행</h1></a>
         </div>
         <div class="topnav">
-            <a class="active" href="/">우리의 여행일기</a>
+            <a href="/cloud">내 일기 모아보기</a>
             <a href="/write">일기 쓰기</a>
-            <a href="/mylog">내 일기 모아보기</a>
-            <a href="#about">about</a>
+            <a class="active" href="/">우리의 여행일기</a>
+            <a href="/about">about</a>
         </div>
     </header>
 
