--- a/templates/write.html
+++ b/templates/write.html
@@ -207,7 +207,6 @@
             }
         }
 
-        /* !!여기는 모바일 버전 css 끝!! */
 
     </style>
 
@@ -270,10 +269,10 @@
             <a href="/"><h1 class="sitetitle">우리의 여행</h1></a>
         </div>
         <div class="topnav">
-            <a href="/">우리의 여행일기</a>
+            <a href="/cloud">내 일기 모아보기</a>
             <a class="active" href="/write">일기 쓰기</a>
-            <a href="/mylog">내 일기 모아보기</a>
-            <a href="#about">about</a>
+            <a href="/">우리의 여행일기</a>
+            <a href="/about">about</a>
         </div>
     </header>
 
@@ -282,13 +281,12 @@
         <!--본문 부분: 기록 작성-->
         <div class="form-post" id="post-box">
             <div>
-                <div style="font-size: 12px">  본인의 ID와 비밀번호는 기억해주세요.</div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <input class="form-control" id="post-writer" placeholder="ID" maxlength="16">
+                        <input class="form-control" id="post-writer" placeholder="ID" maxlength="16" required>
                     </div>
                     <div class="form-group col-md-6">
-                        <input class="form-control" id="post-numbers" placeholder="비밀번호" type="password" pattern="[0-9]*" minlength="4" maxlength="16">
+                        <input class="form-control" id="post-numbers" placeholder="비밀번호" type="password" minlength="4" maxlength="16">
                         <!-- 누르면 비밀번호 보이는 체크박스 -->
                     <input type="checkbox" onclick="myFunction()">
                     <span style="font-size: 12px; color: grey;">비밀번호 보기</span>
@@ -297,7 +295,7 @@
 
 
             <div class="form-group">
-                <input class="form-control" id="post-place" placeholder="여행지">
+                <input class="form-control" id="post-place" placeholder="여행지" required>
             </div>
 
             <div class="form-group">
@@ -354,7 +352,7 @@
 
 
 
-            <button class="btn btn-primary" onclick="make_log()" type="button">일기 저장</button>
+            <button class="btn btn-primary" onclick="make_log()" type="submit">일기 저장</button>
         </div>
 
     </div>
