--- a/templates/about.html
+++ b/templates/about.html
@@ -197,7 +197,7 @@
             <h1 class="sitetitle">우리의 여행</h1>
         </div>
         <div class="topnav">
-            <a href="/cloud">내 일기 모아보기</a>
+            <a href="/cloud">여행 키워드</a>
             <a href="/write">일기 쓰기</a>
             <a href="/">우리의 여행일기</a>
             <a class="active" href="/about">about</a>
