--- a/templates/index.html
+++ b/templates/index.html
@@ -264,7 +264,7 @@
             <a href="/"><h1 class="sitetitle">우리의 여행</h1></a>
         </div>
         <div class="topnav">
-            <a href="/cloud">내 일기 모아보기</a>
+            <a href="/cloud">여행 키워드</a>
             <a href="/write">일기 쓰기</a>
             <a class="active" href="/">우리의 여행일기</a>
             <a href="/about">about</a>
