input required test

--- a/templates/write.html
+++ b/templates/write.html
@@ -279,14 +279,14 @@
     <div class="wrap">
 
         <!--본문 부분: 기록 작성-->
-        <div class="form-post" id="post-box">
+        <form class="form-post" id="post-box">
             <div>
                 <div class="form-row">
+                    <form class="form-group col-md-6" novalidate>
+                        <input class="form-control" id="post-writer" placeholder="ID" maxlength="16" required/>
+                    </form>
                     <div class="form-group col-md-6">
-                        <input class="form-control" id="post-writer" placeholder="ID" maxlength="16" required>
-                    </div>
-                    <div class="form-group col-md-6">
-                        <input class="form-control" id="post-numbers" placeholder="비밀번호" type="password" minlength="4" maxlength="16">
+                        <input class="form-control" id="post-numbers" placeholder="비밀번호" type="password" minlength="4" maxlength="16"/>
                         <!-- 누르면 비밀번호 보이는 체크박스 -->
                     <input type="checkbox" onclick="myFunction()">
                     <span style="font-size: 12px; color: grey;">비밀번호 보기</span>
@@ -349,15 +349,12 @@
             <!--                <label class="custom-file-label" for="file">사진 선택</label>-->
             <!--            </div>-->
 
-
-
-
             <button class="btn btn-primary" onclick="make_log()" type="submit">일기 저장</button>
         </div>
 
+        </form>
+        <div class="card-columns" id="cards-box"></div>
     </div>
-    <div class="card-columns" id="cards-box"></div>
-</div>
 
 <footer class="wrap">
     <div class="footer">
