누락된 것 수정

--- a/templates/cloud.html
+++ b/templates/cloud.html
@@ -209,6 +209,12 @@
         }
         /* !!여기는 모바일 버전 css 끝!! */
     </style>
+    <script>
+         $(document).ready(function () {
+            showLog();
+        });
+    </script>
+
 </head>
 
 <body>
