--- a/templates/cloud.html
+++ b/templates/cloud.html
@@ -52,12 +52,11 @@
                     let temp_html = `<div class="card-img">
                                         <img id="cloud-img" src="${make_cloud}" alt="img">
                                     </div>`
-                    $('#cloud_img').append(temp_html)
+                    $('#cloud-img').append(temp_html)
                 }
             })
         }
     </script>
-
 
     <style>
         * {
@@ -232,13 +231,7 @@
         }
         /* !!여기는 모바일 버전 css 끝!! */
     </style>
-    <script>
-         $(document).ready(function () {
-            showLog();
-        });
-    </script>
-
-</head>
+ </head>
 
 <body>
     <header class="wrap">
