--- a/templates/about.html
+++ b/templates/about.html
@@ -41,6 +41,14 @@
             font-family: 'Noto Serif KR', serif;
         }
 
+        .intro {
+            width: 900px;
+            margin: auto;
+            text-align: center;
+            padding-top: 40px;
+            font-size: 15px;
+        }
+
         .sitetop {
             height: 300px;
             width: 900px;
@@ -203,10 +211,19 @@
         </div>
     </header>
 
-    <div class="wrap">
+    <div class="intro">
+            <p style="font-size:30px">Hello we are<br></p>
+            <img src="https://seen-botany-ce5.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F6f798e65-e7ab-4ef5-aae7-fc24a93209ee%2F%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA_2021-10-05_%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE_7.50.41.png?table=block&id=a33ef8b9-9702-49c2-af68-ad8c51574c36&spaceId=fa72b460-e2cb-4100-b7bd-2fb23615c3e9&width=870&userId=&cache=v2">
+            <p>다시 없을 최강 조합으로 모인 우리는 'Coding Woman Fighter' 입니다! 🥊 <br>
+            프론트엔드의 수진, 해인, 현 그리고 백엔드의 유정, 준희까지</p>
+            <img src="https://seen-botany-ce5.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F7f6f95d2-56ed-42c0-b063-0c0e9ccaf203%2FUntitled.png?table=block&id=8766e46c-2847-4fb7-a3b3-c49e2ca1aa90&spaceId=fa72b460-e2cb-4100-b7bd-2fb23615c3e9&width=2000&userId=&cache=v2" width="400px"></p>
 
+            <p>COVID-19로 인해 더더욱 간절해진 취미, 여행.<br>
+            '우리의 여행'은 같은 여행지를 각양각색의 사람들이 여행하며 그리는 우리의 여행은 어떤 모습일까? 그 궁금증에서 시작된 프로젝트입니다.<br>
+            여행을 떠난 곳에서 느낀 서로의 감상을 공유하고, 모두가 그 여행지에서 느낀 가장 강렬한 단어들을 모아 보여드립니다.</p><br>
 
-
+            <p><h5>당신의 여행은 어땠나요?<br><br>
+            우리의 여행은 어떤 모습일까요?</h5></p><br><br>
     </div>
 
     <footer class="wrap">
