--- a/templates/cloud.html
+++ b/templates/cloud.html
@@ -248,7 +248,7 @@
 
     <div class="wrap">
         <div class="card-img">
-            <img id="cloud-img" src="..." alt="img">
+            <img id="cloud-img" src="/travellog-new/wordcloud.png" alt="img">
         </div>
     </div>
 
