--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+    <link href='{{ url_for("static", filename="mystyle.css") }}' rel="stylesheet">
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -83,76 +84,6 @@
           rel="stylesheet">
 
     <style>
-        * {
-            font-family: 'Noto Serif KR', serif;
-        }
-
-        .sitetop {
-            height: 300px;
-            width: 900px;
-            margin: auto;
-            background-image: url("https://miro.medium.com/max/1400/1*T4H2-9ToU2Eg5yns8YQhIA.jpeg");
-            background-size: cover;
-            background-position: center;
-        }
-
-        .sitetop > a {text-decoration: none;}
-
-        .sitetitle {
-            margin: 10px;
-            padding: 120px 0px;
-            text-align: center;
-            font-size: 50px;
-            font-weight: bold;
-
-            color: #ffffff;
-            text-shadow: 2px 2px 0px #333333;
-        }
-
-        /* Add a black background color to the top navigation */
-        .topnav {
-            width: 900px;
-            margin: auto;
-            background-color: #333;
-            overflow: hidden;
-        }
-
-        /* Style the links inside the navigation bar */
-        .topnav a {
-            float: left;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-        }
-
-        /* Change the color of links on hover */
-        .topnav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        /* Add a color to the active/current link */
-        .topnav a.active {
-            background-color: darkgoldenrod;
-            color: white;
-        }
-
-        .wrap {
-            width: 900px;
-            margin: auto;
-        }
-
-        .footer {
-            bottom: 10px;
-            height: 3rem; /* 푸터 높이 */
-            background-color: darkgoldenrod;
-            width: 900px;
-            text-align: center;
-            color: white;
-        }
-
 
         /* bootstrap css문제 해결을 위해 class에서 id로 변경 */
         #card-box {
@@ -177,61 +108,6 @@
 
         @media screen and (max-width: 900px) {
 
-
-            .sitetop {
-                width: 100%;
-                height: 160px;
-                background-image: url("../static/introduction.jpeg");
-                background-size: cover;
-                background-position: center;
-            }
-
-            .sitetitle {
-                margin: 0px;
-                padding: 50px 0px;
-                text-align: center;
-                font-family: "Arial Black", sans-serif;
-                font-size: 40px;
-                font-weight: bold;
-                color: #ffffff;
-                text-shadow: 2px 2px 0px #333333;
-                text-decoration: none;
-            }
-
-            /* Add a black background color to the top navigation */
-            .topnav {
-                width: 100%;
-                margin: auto;
-                background-color: #333;
-                overflow: hidden;
-            }
-
-            /* Style the links inside the navigation bar */
-            .topnav a {
-                float: left;
-                color: #f2f2f2;
-                text-align: center;
-                padding: 10px 16px;
-                text-decoration: none;
-                font-size: 12px;
-            }
-
-            /* Change the color of links on hover */
-            .topnav a:hover {
-                background-color: #ddd;
-                color: black;
-            }
-
-            /* Add a color to the active/current link */
-            .topnav a.active {
-                background-color: darkgoldenrod;
-                color: white;
-            }
-
-            .wrap {
-                width: 100%;
-            }
-
             /* index.html만의 부분 s */
             #card-deck {
                 width: 100%;
@@ -244,14 +120,7 @@
             }
 
             /* index.html만의 부분 e */
-            .footer {
-                width: 100%;
-                bottom: 10px;
-                height: 3rem; /* 푸터 높이 */
-                background-color: darkgoldenrod;
-                text-align: center;
-                color: white;
-            }
+
         }
         /* !!여기는 모바일 버전 css 끝!! */
     </style>
@@ -259,8 +128,8 @@
 
 <body>
     <header class="wrap">
-        <div class="sitetop">
-            <a href="/"><h1 class="sitetitle">우리의 여행</h1></a>
+        <div class="sitetop" onclick="window.location.href='/cloud'">
+            <h1 class="sitetitle">우리의 여행</h1>
         </div>
         <div class="topnav">
             <a href="/cloud">여행 키워드</a>
