--- a/templates/about.html
+++ b/templates/about.html
@@ -47,7 +47,27 @@
             font-size: 15px;
         }
 
-        @media screen and (max-width: 900px) {}
+        .about {
+                width: 500px;
+                margin:auto;
+                padding: 0 20px 0 20px;
+        }
+
+        @media screen and (max-width: 900px) {
+            .intro {
+                width: 100%;
+                margin: auto;
+                text-align: center;
+                padding-top: 40px;
+                font-size: 15px;
+            }
+
+            .about {
+                width: 500px;
+                margin:auto;
+                padding: 0 20px 0 20px;
+            }
+        }
 
         /* !!여기는 모바일 버전 css 끝!! */
     </style>
@@ -74,7 +94,7 @@
         <img src="https://seen-botany-ce5.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F7f6f95d2-56ed-42c0-b063-0c0e9ccaf203%2FUntitled.png?table=block&id=8766e46c-2847-4fb7-a3b3-c49e2ca1aa90&spaceId=fa72b460-e2cb-4100-b7bd-2fb23615c3e9&width=2000&userId=&cache=v2"
              width="400px"></p>
 
-        <p>COVID-19로 인해 더더욱 간절해진 취미, 여행.<br>
+        <p class="about">COVID-19로 인해 더더욱 간절해진 취미, 여행.<br>
             '우리의 여행'은 같은 여행지를 각양각색의 사람들이 여행하며 그리는 우리의 여행은 어떤 모습일까? 그 궁금증에서 시작된 프로젝트입니다.<br>
             여행을 떠난 곳에서 느낀 서로의 감상을 공유하고, 모두가 그 여행지에서 느낀 가장 강렬한 단어들을 모아 보여드립니다.</p><br>
 
