--- a/templates/write.html
+++ b/templates/write.html
@@ -28,7 +28,7 @@
 
     <!-- 구글폰트 -->
     <link
-            href="https://fonts.googleapis.com/css?family=Stylish&display=swap"
+            href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@300&family=Nanum+Gothic&display=swap"
             rel="stylesheet"
     />
 
