--- a/templates/index.html
+++ b/templates/index.html
@@ -162,17 +162,17 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="https://placeimg.com/1080/500/animals" alt="First slide">
+                    <img class="d-block w-100" src="https://api.cdn.visitjeju.net/photomng/imgpath/201808/08/41382152-d67e-46e1-9167-b5ea4ef84068.jpg" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>My Caption Title (1st Image)</h5>
-                        <p>The whole caption will only show up if the screen is at least medium size.</p>
+                        <h5></h5>
+                        <p></p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="https://placeimg.com/1080/500/arch" alt="Second slide">
+                    <img class="d-block w-100" src="https://api.cdn.visitjeju.net/photomng/imgpath/201910/29/7497f957-7feb-4257-9903-0e6a994569d5.jpg" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="https://placeimg.com/1080/500/nature" alt="Third slide">
+                    <img class="d-block w-100" src="https://api.cdn.visitjeju.net/photomng/imgpath/201911/05/8f329d08-d310-44a2-86f7-793206589cae.jpg" alt="Third slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
