--- a/templates/index.html
+++ b/templates/index.html
@@ -49,10 +49,10 @@
                         let temp_html = `<div class="card">
                                             <div class="card-body">
                                                 <p class="card-title" style="font-size: small; text-align:left;">
-                                                    여행지: ${place}
+                                                    여행지: <span style="font-weight: 600; color: olivedrab;">${place}</span>
                                                     <span style="float:right;">${weather}</span>
                                                 </p>
-                                                <p class="card-text"><h5>${title}</h5></p>
+                                                <p class="card-text"><h5 style="font-weight: 600;">${title}</h5></p>
                                                 <p class="card-text">${comment}</p>
                                                 <div class="card-bottom" style="font-size: small; text-align:left;">
                                                     by. ${writer}
