--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -59,6 +59,10 @@
 .wrap {
     width: 100%;
     margin: auto;
+    background-image: url("https://i.imgur.com/uzZHsUP.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .footer {
