--- a/templates/write.html
+++ b/templates/write.html
@@ -90,13 +90,12 @@
             var pilsu_weather = postForm.weather.value;
             var pilsu_comment = postForm.comment.value;
 
-            if (!pilsu_writer || !pilsu_numbers || !pilsu_place || !pilsu_title || !pilsu_date || !pilsu_weather || !pilsu_comment ) {
+            if (!pilsu_writer || !pilsu_numbers || !pilsu_place || !pilsu_title || !pilsu_date || !pilsu_weather || !pilsu_comment) {
                 alert("빈칸을 모두 입력해주세요.")
 
             } else {
-                postForm.submit();
 
-                    // 본문 기록 작성에서 id 값으로 지정한 것이 #뒤에 적힌 것
+                // 본문 기록 작성에서 id 값으로 지정한 것이 #뒤에 적힌 것
                 let writer = $("#post-writer").val();
                 let numbers = $("#post-numbers").val();
                 let place = $("#post-place").val();
@@ -152,11 +151,11 @@
         </div>
     </header>
 
-    <form class="wrap">
+    <div class="wrap">
         <br>
         <br>
         <!--본문 부분: 기록 작성-->
-        <div class="form-post" id="post-box" name="postForm">
+        <form class="form-post" id="post-box" name="postForm">
 
                 <!--ID & 비번-->
                 <div class="form-row">
@@ -220,13 +219,13 @@
                 <!--                <label class="custom-file-label" for="file">사진 선택</label>-->
                 <!--            </div>-->
 
-                <button class="btn btn-primary" onclick="make_log()" type="submit">일기 저장</button>
+                <button class="btn btn-primary" onclick="make_log()" type="button">일기 저장</button>
 
-        </div>
+        </form>
         <br>
         <br>
         <br>
-    </form>
+    </div>
 
     <footer class="wrap">
         <div class="footer">
