--- a/templates/cloud.html
+++ b/templates/cloud.html
@@ -80,7 +80,7 @@
     <div class="wrap">
         <!--워드클라우드-->
         <div class="card-img">
-            <img id="cloud-img" src="/travellog-new/wordcloud.png" alt="img">
+            <img id="cloud-img" src="../static/wordcloud.png" alt="img">
         </div>
 
         <!--카라솔-->
