probably final commit

--- a/templates/cloud.html
+++ b/templates/cloud.html
@@ -60,7 +60,10 @@
     </script>
 
     <style>
-
+        #cloud-img {
+            margin : auto;
+            display: block;
+        }
     </style>
  </head>
 
