commit design change

--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -7,7 +7,7 @@
     height: 300px;
     width: 100%;
     margin: auto;
-    background-image: url("https://miro.medium.com/max/1400/1*T4H2-9ToU2Eg5yns8YQhIA.jpeg");
+    background-image: url("https://i.imgur.com/oChVxBP.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
