--- a/templates/write.html
+++ b/templates/write.html
@@ -205,10 +205,10 @@
                 <!--내용작성-->
                 <div class="form-group-comment">
                     <label for="post-comment">일기 내용</label>
-                    <textarea class="form-control" id="post-comment" name="comment" rows="2"></textarea>
+                    <textarea class="form-control" id="post-comment" name="comment" rows="4"></textarea>
                     <div class="count-comment-length" id="count">
                         <span id="current_count">0</span>
-                        <span id="maximum_count">/ 140</span>
+                        <span id="maximum_count">/ 200</span>
                     </div>
                 </div>
 
@@ -219,7 +219,8 @@
                 <!--                <label class="custom-file-label" for="file">사진 선택</label>-->
                 <!--            </div>-->
 
-                <button class="btn btn-primary" onclick="make_log()" type="button">일기 저장</button>
+                <button class="btn btn-primary" onclick="make_log()" type="button" style="background-color: olivedrab; border-color: olivedrab">일기 저장</button>
+                <span  style="font-size: 14px;">&nbsp;&nbsp;&nbsp;모든 칸 작성 필수 </span>
 
         </form>
         <br>
