--- a/templates/index.html
+++ b/templates/index.html
@@ -109,14 +109,18 @@
         @media screen and (max-width: 900px) {
 
             /* index.html만의 부분 s */
-            #card-deck {
+            #card-box {
                 width: 100%;
                 padding-bottom: 5px;
+                padding-left: 15px;
+                padding-right:15px;
 
             }
 
             .card {
-                min-width: 250px;
+                min-width: 80%;
+                max-width: 250px;
+                margin: auto;
             }
 
             /* index.html만의 부분 e */
